@startuml airTransportCompany_aggregate
left to right direction
skinparam packageStyle rectangle
skinparam nodesep 40
skinparam ranksep 60
hide empty members

package "AirTransportCompany_Aggregate" <<aggregate>> {
  class AirTransportCompany <<entity>> <<root>> {
  }
  class CompanyName <<value object>> {
    name
  }
  note right of CompanyName : unique (US060)
  class IATACode_ATC <<value object>> {
    code
  }
  class ICAOCode_ATC <<value object>> {
    code
  }
  note right of IATACode_ATC : IATACode (same class as in Airport)
  note right of ICAOCode_ATC : ICAOCode (same class as in Airport)
  AirTransportCompany *-- CompanyName : namedAs
  AirTransportCompany *-- IATACode_ATC : identifiedBy
  AirTransportCompany *-- ICAOCode_ATC : identifiedBy
}

package "Aircraft_Aggregate" <<aggregate>> {
  class Aircraft <<entity>> <<root>> {
    numberOfFlightCrewMembers
  }
  class RegistrationNumber <<value object>> {
    number
    registrationCountry
  }
  note right of RegistrationNumber : unique worldwide (US070)
  class CabinConfiguration <<value object>> {
  }
  class SeatClass <<value object>> {
    className
    numberOfSeats
  }
  CabinConfiguration *-- "1..*" SeatClass : contains
  note right of CabinConfiguration : total seats cannot exceed\nmodel capacity (US070)
  enum OperationalStatus {
    active
    decommissioned
  }
  Aircraft *-- RegistrationNumber : identifiedBy
  Aircraft *-- CabinConfiguration : configuredWith
  Aircraft --> OperationalStatus : hasStatus
}


package "Collaborator_Aggregate" <<aggregate>> {
  abstract class Collaborator <<entity>> <<root>> {
    name
    position
  }

  class ATCCollaborator <<entity>> {
  }
  class FlightControlOperator <<entity>> {
  }
  class WeatherPerson <<entity>> {
  }
  class SecurityClearance <<value object>> {
    expiryDate
  }
  note right of SecurityClearance : auto-expires.\nUpdatable by Admin/Backoffice (sec. 3.1.1)
  class SkillsAssessment <<value object>> {
    assessmentDate
  }
  note right of SkillsAssessment : periodic, every 5 years (sec. 3.1.1)
  class SystemUser <<entity>> {
  }
  note left of SystemUser : EAPLI framework boundary.\nStores: email (unique, sec. 3.1.1), name, phoneNumber (sec. 3.1.1).\nInternal details managed by the framework.
  Collaborator <|--- ATCCollaborator
  Collaborator <|--- FlightControlOperator
  Collaborator <|--- WeatherPerson
  Collaborator *--- SecurityClearance : hasActive
  Collaborator *--- SkillsAssessment : assessed
  Collaborator -> SystemUser : linkedTo
}

package "FlightRoute_Aggregate" <<aggregate>> {
  class FlightRoute <<entity>> <<root>> {
    deactivationDate
  }
  class RouteName <<value object>> {
    name
  }
  note right of RouteName : 2 letters + up to 4 digits\n(e.g. TP123). unique (US073)
  FlightRoute *--- RouteName : identifiedBy
}

Aircraft "*" --> "1" AirTransportCompany : ownedBy >


Collaborator "*" ---> "0..1" AirTransportCompany: employedBy >
note on link : Only ATCCollaborator.\nFCO/WeatherPerson: null.

FlightRoute "*" --> "1" AirTransportCompany : ownedBy >


@enduml